Edited README via GitHub

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Энэхүү гарын загварыг МacOSX үйлдлийн системд дээр ашиглах зорилгоор үүсгэлээ.
+Энэхүү гарын загварыг МacOSX үйлдлийн систем дээр ашиглах зорилгоор үүсгэлээ.
 
 Суулгах заавар:
 
